src/render/snapshots/webgit__render__blob__tests__blob_html_empty.snap
---
source: src/render/blob.rs
expression: "render(b\"\")"
---
<div class="blob-info">
  blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 <!--(<a href="#" class="blob-plain-link">plain</a>)-->
</div>
<table class="blob-table">
  <tbody>
    
  </tbody>
</table>
