src/render/snapshots/webgit__render__blob__tests__blob_html_markdown_source.snap
---
source: src/render/blob.rs
expression: "render_path(\"docs/setup.md\", b\"# Setup\\n\\nRun it.\\n\")"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/tree/docs/setup.md?render=1" class="blob-alt-view">rendered</a>
</div>
<table class="blob-table">
<tbody>
<tr id="n1">
<td class="lno">
<a href="#!/tree/docs/setup.md#n1" data-n="1">1</a>
</td>
<td class="code"># Setup</td>
</tr>
<tr id="n2">
<td class="lno">
<a href="#!/tree/docs/setup.md#n2" data-n="2">2</a>
</td>
<td class="code">
</td>
</tr>
<tr id="n3">
<td class="lno">
<a href="#!/tree/docs/setup.md#n3" data-n="3">3</a>
</td>
<td class="code">Run it.</td>
</tr>
</tbody>
</table>
