src/render/snapshots/webgit__render__blob__tests__blob_html_svg_rendered.snap
---
source: src/render/blob.rs
expression: "render_route_with_url(\"img/logo.svg\", SVG, true, \"blob:fake-url\")"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="blob:fake-url" download="logo.svg" class="blob-download">download</a> · <a href="#!/tree/img/logo.svg" class="blob-alt-view">source</a>
</div>
<img src="blob:fake-url" alt="logo.svg" class="blob-image">
