src/render/snapshots/webgit__render__blob__tests__blob_html_svg_source.snap
---
source: src/render/blob.rs
expression: "render_path(\"img/logo.svg\", SVG)"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391 · <a href="#!/tree/img/logo.svg?render=1" class="blob-alt-view">rendered</a>
</div>
<table class="blob-table">
<tbody>
<tr id="n1">
<td class="lno">
<a href="#!/tree/img/logo.svg#n1" data-n="1">1</a>
</td>
<td class="code">&lt;svg xmlns="http://www.w3.org/2000/svg"&gt;&lt;rect/&gt;&lt;/svg&gt;</td>
</tr>
</tbody>
</table>
