src/render/snapshots/webgit__render__blob__tests__blob_html_too_many_lines.snap
---
source: src/render/blob.rs
expression: "render(&b\"x\\n\".repeat(MAX_BLOB_LINES + 1))"
---
<div class="blob-info">blob: e69de29bb2d1d6434b8b29ae775ad8c2e48c5391</div>
<p class="msg">File too large to display (20001 lines, limit 20000).</p>
